--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
   <title>11C Бронирование мест</title>
 </head>
 <body>
+    <ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="/subject">Subject</a></li>
+    </ul>
+    
+    <div id="content"></div>
     <div class="image-container">
         <img src="https://i.ibb.co.com/rFgT4rB/00000.jpg">
     </div>
