--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
     <div id="registration-page">
         <p id="registration-page1">REGISTER</p>
-        <p id="registration-page2">BOOK PLACES<p>
+        <p id="registration-page2">BOOK PLACES</p>
         <p id="registration-page3">ENJOY</p>
     </div>
     <img src="https://i.ibb.co.com/rFgT4rB/00000.jpg">
