--- a/subject.html
+++ b/subject.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="button-container">
-        <button id="changeTextButton" onclick="window.location.href='class1.html'">Click me!</button>
+        <button id="changeTextButton" onclick="window.location.href='class1'">Click me!</button>
         <button id="changeTextButton1">Click me!</button>
         <button id="changeTextButton2">Click me!</button>
         <button id="changeTextButton3">Click me!</button>
