--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
     <div class="container">
     <div class="input-group">
-      <input type="text" id="code" class="input-group__input" required autocomplete="off"" required/>
+      <input type="text" id="code" class="input-group__input" required autocomplete="off" required/>
       <label for="code" class="input-group__label">Code</label>
   </div>
   <button id="submitButton" class="submit-button">Submit</button>
