--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yerazz blog</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
@@ -132,7 +131,7 @@
               <p>
                 Reflecting on my journey of self-improvement, self-discovery, and skill development. Sharing transformative experiences and valuable lessons that have shaped my evolving self.
               </p>
-              <a href="impovement.html" class="read-more">
+              <a href="improvement.html" class="read-more">
                 Read more <span class="sr-only">about this is some title</span>
                 <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 20 20" fill="currentColor">
                   <path fill-rule="evenodd" d="M12.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-2.293-2.293a1 1 0 010-1.414z" clip-rule="evenodd" />
