--- a/school.html
+++ b/school.html
@@ -17,3 +17,14 @@
     <div class="description1">
         <a>Stay tuned for updates on events, gatherings, and enjoyable experiences that take place within the school, as I share memorable moments from my academic journey.</a>
     </div>
+
+    <div class="wrapper">
+        <div class="content">
+          <div class="card first">
+            <h2><a>Football Tournament.</a></h2>
+            <p class="date">4 October, 2023</p>
+            <p class="text">Today, the football tournament between the 9th, 10th, and 11th grades at school came to an end. There were the final two matches in the group today. The 9th graders (9C) were supposed to play against the 10th graders (10C), and the 11th graders (11C, our team) were supposed to play against the 10th graders (10B).
+                Unfortunately, 9C couldn't play their match, which resulted in an automatic victory for 10C. The match between 11C and 10B ended in a draw. As a result, the final standings are as follows: 10C in 1st place, 11C in 2nd place, 10B in 3rd place, and 9C in 4th place.
+          </div>
+        </div>
+    </div>
