--- a/hobbyandinterest.html
+++ b/hobbyandinterest.html
@@ -11,50 +11,63 @@
         <img src="img/ffdc9d.png" alt="welcome-img">
     </div>
     <div class="welcome">
-        <h2>Hobby and Interest</h2>
-        <h2>Hobby and Interest</h2>
+        <h2>Hobby</h2>
+        <h2>Hobby</h2>
     </div>
-    <div class="description1">
-        <a> Explore my diverse hobbies and interests that add depth and creativity to my life's journey.</a>
-    </div>
-    <div class="projcard-container">  
-      <div class="projcard projcard-blue">
-        <div class="projcard-innerbox">
-          <img class="projcard-img" src="img/interests/30-09-23.png"/>
-          <div class="projcard-textbox">
-            <div class="projcard-title">The end.</div>
-            <div class="projcard-subtitle">30 September, 2023</div>
-            <div class="projcard-bar"></div>
-            <div class="projcard-description">I've successfully wrapped up the project, a seven-day effort with an average daily commitment of three hours. Now, my primary focus is on revisiting and enhancing each section. Additionally, I'm entertaining the idea of initiating a new project.</div>
-            <div class="projcard-tagbox"></div>
-          </div>
-        </div>
-      </div> 
-        <div class="projcard projcard-blue">
-            <div class="projcard-innerbox">
-              <img class="projcard-img" src="img/interests/29-09-23.png"/>
-              <div class="projcard-textbox">
-                <div class="projcard-title">Some sections</div>
-                <div class="projcard-subtitle">29 September, 2023</div>
-                <div class="projcard-bar"></div>
-                <div class="projcard-description">I've successfully finished certain sections of my website, but others are still undergoing development. As the project advances towards its final stages, I'm diligently working to ensure its completion at the earliest possible moment. My focus remains on delivering a polished and functional website to meet my goals.</div>
-                <div class="projcard-tagbox"></div>
-              </div>
-            </div>
-          </div>
-        <div class="projcard projcard-blue">
-          <div class="projcard-innerbox">
-            <img class="projcard-img" src="img/interests/24-09-23.png" />
-            <div class="projcard-textbox">
-              <div class="projcard-title">The project</div>
-              <div class="projcard-subtitle">24 September, 2023</div>
-              <div class="projcard-bar"></div>
-              <div class="projcard-description">I've initiated my project, opting for programming languages like HTML, CSS, and potentially JavaScript. My primary goal is to expedite the project's completion. I'm enthusiastic and focused on this endeavor, aiming to efficiently structure web content with HTML, enhance visuals through CSS, and potentially add dynamic functionality with JavaScript if needed. I'm dedicated to effective time and resource management for a successful and timely project outcome.</div>
-              <div class="projcard-tagbox"></div>
-            </div>
+
+    <div class="main">
+  <ul class="cards">
+    <li class="cards_item">
+      <div class="card">
+        <div class="card_image"><img src="img/interests/05-10-23.png" alt=""></div>
+        <div class="card_content">
+          <h2 class="card_title">Adapted.</h2>
+          <div class="card_text">
+            <h2>5 October, 2023</h2>
+            <p>We're aware that I had to modify this website to make it compatible with mobile devices. After working on it continuously for three hours a day, I completed the task. I made several adjustments, adding and removing elements, and I even had to let go of the beautiful design I initially created for desktop computers (although it still looks pretty good). Now, you can access and enjoy my daily news updates from your mobile device. </p>
           </div>
         </div>
       </div>
-      </body>
-      </html>
+    </li>
+    <li class="cards_item">
+      <div class="card">
+        <div class="card_image"><img src="img/interests/30-09-23.png" alt=""></div>
+        <div class="card_content">
+          <h2 class="card_title">The end.</h2>
+          <div class="card_text">
+            <h2>30 September, 2023</h2>
+            <p>I've successfully wrapped up the project, a seven-day effort with an average daily commitment of three hours. Now, my primary focus is on revisiting and enhancing each section. Additionally, I'm entertaining the idea of initiating a new project. </p>
+          </div>
+        </div>
+      </div>
+    </li>
+    <li class="cards_item">
+      <div class="card">
+        <div class="card_image"><img src="img/interests/29-09-23.png" alt=""></div>
+        <div class="card_content">
+          <h2 class="card_title">Some sections</h2>
+          <div class="card_text">
+            <h2>29 September, 2023</h2>
+            <p>I've successfully finished certain sections of my website, but others are still undergoing development. As the project advances towards its final stages, I'm diligently working to ensure its completion at the earliest possible moment. My focus remains on delivering a polished and functional website to meet my goals. </p>
+          </div>
+        </div>
+      </div>
+    </li>
+    <li class="cards_item">
+      <div class="card">
+        <div class="card_price"></div>
+        <div class="card_image"><img src="img/interests/24-09-23.png" alt=""></div>
+        <div class="card_content">
+          <h2 class="card_title">The project</h2>
+          <div class="card_text">
+            <h2>24 September,2023</h2>
+            <p>I've initiated my project, opting for programming languages like HTML, CSS, and potentially JavaScript. My primary goal is to expedite the project's completion. I'm enthusiastic and focused on this endeavor, aiming to efficiently structure web content with HTML, enhance visuals through CSS, and potentially add dynamic functionality with JavaScript if needed. I'm dedicated to effective time and resource management for a successful and timely project outcome. </p>
+          </div>
+        </div>
+      </div>
+    </li>
+  </ul>
+</div>
+</body>
+</html>
     
