--- a/index.html
+++ b/index.html
@@ -14,24 +14,6 @@
         <h2>Welcome!</h2>
         <h2>Welcome!</h2>
     </div>
-    <div class="description1">
-        <a>This website represents my official platform for sharing my everyday activities, events, and offering a diary-like perspective.</a>
-    </div>
-    <div class="overallyerass">
-    <div id="yerassylphoto">
-        <img src="img/yerassyl.jpeg" alt="">
-    </div>
-    <div class="overall-introduction">
-        <img src="img/ee6c4d.png" alt="">
-        <div class="main-info-yerass">
-            <p id="yerass">Hello, I'm Sailau Yerassyl</p>
-            <p id="yerass2">a 16-year-old in the 11th grade at Almaty Bilim-Innovation Lyceum.<br>
-                My life is a vibrant tapestry of experiences and learning.<br>
-                Stay tuned for upcoming articles where<br>
-                I'll share more about my journey and the colors that fill it.</p>
-        </div>
-    </div>
-    </div>
 
 
 
@@ -51,7 +33,7 @@
               <p>
                 Stay tuned for updates on events, gatherings, and enjoyable experiences that take place within the school, as I share memorable moments from my academic journey.
               </p>
-              <a href="school" class="read-more">
+              <a href="school.html" class="read-more">
                 Read more <span class="sr-only">about this is some title</span>
                 <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 20 20" fill="currentColor">
                   <path fill-rule="evenodd" d="M12.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-2.293-2.293a1 1 0 010-1.414z" clip-rule="evenodd" />
