--- a/adventure.html
+++ b/adventure.html
@@ -15,3 +15,41 @@
         <h2>Adventure.</h2>
         <h2>Adventure.</h2>
     </div>
+    <div class="container"> 
+        <h1 class="main-heading">5 October,2023</h1> 
+        <div class="content"> 
+            <div class="slideshow"> 
+                <button class="slide-btn slide-btn-1"></button> 
+                <button class="slide-btn slide-btn-2"></button> 
+                <button class="slide-btn slide-btn-3"></button> 
+                <button class="slide-btn slide-btn-4"></button> 
+                <button class="slide-btn slide-btn-5"></button> 
+                <div class="slideshow-wrapper"> 
+                    <div class="slide"> 
+                        <img class="slide-img"
+                            src= 
+"img/adventure/sept17-231.jpeg"> 
+                    </div> 
+                    <div class="slide"> 
+                        <img class="slide-img"
+                            src= 
+"img/adventure/sept17-232.jpeg"> 
+                    </div> 
+                    <div class="slide"> 
+                        <img class="slide-img" src= 
+"img/adventure/sept17-233.jpeg"> 
+                    </div> 
+                    <div class="slide"> 
+                        <img class="slide-img" src= 
+"img/adventure/sept17-234.jpeg"> 
+                    </div> 
+                    <div class="slide"> 
+                        <img class="slide-img" src= 
+"img/adventure/sept17-235.jpeg"> 
+                    </div> 
+                </div> 
+            </div> 
+        </div> 
+    </div> 
+
+</body>
