--- a/development.html
+++ b/development.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Self-improvement</title>
-    <link rel="stylesheet" type="text/css" href="improvement.css">
+    <link rel="stylesheet" type="text/css" href="development.css">
 </head>
 <body>
     <div class="welcome-img">
