--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               <p>
                 Stay tuned for updates on events, gatherings, and enjoyable experiences that take place within the school, as I share memorable moments from my academic journey.
               </p>
-              <a href="school.html" class="read-more">
+              <a href="school" class="read-more">
                 Read more <span class="sr-only">about this is some title</span>
                 <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 20 20" fill="currentColor">
                   <path fill-rule="evenodd" d="M12.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-2.293-2.293a1 1 0 010-1.414z" clip-rule="evenodd" />
@@ -53,7 +53,7 @@
               <p>
                 Explore my curated book recommendations, delve into my personal opinions on various books, and discover the valuable lessons I've learned from these reads, all in one informative section.
               </p>
-              <a href="books.html" class="read-more">
+              <a href="books" class="read-more">
                 Read more <span class="sr-only">about this is some title</span>
                 <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 20 20" fill="currentColor">
                   <path fill-rule="evenodd" d="M12.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-2.293-2.293a1 1 0 010-1.414z" clip-rule="evenodd" />
@@ -73,7 +73,7 @@
               <p>
                 Join me on city jaunts, country explorations, and occasional international adventures as I share my travel experiences in this diverse section.
               </p>
-              <a href="adventure.html" class="read-more">
+              <a href="adventure" class="read-more">
                 Read more <span class="sr-only">about this is some title</span>
                 <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 20 20" fill="currentColor">
                   <path fill-rule="evenodd" d="M12.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-2.293-2.293a1 1 0 010-1.414z" clip-rule="evenodd" />
@@ -94,7 +94,7 @@
               <p>
                 Explore my diverse hobbies and interests that add depth and creativity to my life's journey.
               </p>
-              <a href="hobbyandinterest.html" class="read-more">
+              <a href="hobbyandinterest" class="read-more">
                 Read more <span class="sr-only">about this is some title</span>
                 <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 20 20" fill="currentColor">
                   <path fill-rule="evenodd" d="M12.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-2.293-2.293a1 1 0 010-1.414z" clip-rule="evenodd" />
@@ -114,7 +114,7 @@
               <p>
                 Reflecting on my journey of self-development, self-discovery, and skill development. Sharing transformative experiences and valuable lessons that have shaped my evolving self.
               </p>
-              <a href="development.html" class="read-more">
+              <a href="development" class="read-more">
                 Read more <span class="sr-only">about this is some title</span>
                 <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 20 20" fill="currentColor">
                   <path fill-rule="evenodd" d="M12.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-2.293-2.293a1 1 0 010-1.414z" clip-rule="evenodd" />
